
New

* if date changed because of no subscription, the list of user without subscription
  is shown in the alert
* introductory walkthrough with 'rintrojs'
* can choose Database Server Driver

Improvements & Fixes

* server database password is 'maintained' (if not modified) during server description edit
  bug fixed where sometimes database password was not useable until after restart

Version 1.5.2, 20th February 2020
=================================

Fix

* fix to demonstration mode

Version 1.5.1, 19th February 2020
================================

New

* subscription features
*  reads subscription database (user-action, from user configuration panel)
*  CDM and BIllings UI checks subscription status
*   if clinician selected with no subscription, then
*   appointments must be minimum one week old
*  user configuration displays license information
*  subscripton information can be added manually in user configuration
* updates date range dialog if dM$date_aR or dM$date_bR changes

Changes

* warnings regarding changing configuration filepath location
   GPstat! restart recommended.
   though changing configuration filepath appears to work 'on-the-fly' currently!
* better handling if Best Practice database not opened


Version 1.4.1, 22nd December 2019
=================================

Features

* modified module_Immunization to depend on dM$vaccine_choices to choose vaccines.
  (in effect, adds 'measles vaccine' to list of choices without
  explicitly adding 'measles' as a vaccine coice from within GPstat!)

* Conditions tab

  search for post-natal (or potentially post-natal) patients.
  Filtered by number of days post-natal, whether a 'visit' recorded by the
  selected physicians during the potential pregnancy period, and any
  recorded pregnancy outcome.

  Attached to appointments within the defined appointment search period.

Version 1.4.0, 12th November 2019
=================================

Features
